<resources>
    <string name="app_name">RemindMe</string>
    <string name="edit_text_password_hint">Password</string>
    <string name="edit_text_email_hint">Email Address</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registeration">RegisterationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirm_registration_text">Confirm</string>
    <string name="username_text_hint">Username</string>
    <string name="confirm_password_text_hint">Confirm Password</string>
    <string name="don_t_have_a_user_text">Don\'t have a user?</string>
    <string name="registration_link_text">Click here</string>
    <string name="choose_image_text_hint">Profile Image</string>
    <string name="choose_image_button_text">Choose</string>
    <string name="profile_image_desc">Profile Image</string>

    <string name="already_registered_text">Already registered?</string>
    <string name="login_link_text">Login here!</string>

    <string name="text_enter_email_to_share">Enter a user email to share the task</string>
    <string name="btn_share_task">share</string>
    <string name="btn_update_task">Update</string>

    <string name="tab1_private_task">Private tasks</string>
    <string name="tab2_shared_task">Shared tasks</string>
    <string name="description_task">What should you remember?</string>
    <string name="priority">priority</string>
    <string name="switch_date">Set a reminder by date</string>
    <string name="switch_location">Set a reminder by location</string>
    <string name="textView_chooseDate">Select date</string>
    <string name="textView_chooseTime">Select time</string>
    <string name="completeTV_SearchLocation">Select Location</string>
    <string name="title_newTask">New Task</string>
    <string name="btn_addTask">add task</string>
    <string name="RemindMeChannelName">RemindMeNotifications</string>
    <string name="channel_description">Remind me local notifications</string>

    <string name="title_edit_task">Edit Task</string>

    <string-array name="priority_spinner">
        <item>Choose Priority</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

</resources>
