<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_edit_task"
        android:padding="5dp"
        android:textSize="25dp"
        />


    <EditText
        android:id="@+id/desc_task_textView"
        android:layout_width="395dp"
        android:layout_height="70dp"
        android:layout_below="@id/dialog_edit_title"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:background="@drawable/frame"
        android:hint="@string/description_task"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="#FFFFFF" />

    <Spinner
        android:id="@+id/priority_spinner"
        android:layout_width="400dp"
        android:layout_height="45dp"
        android:layout_below="@id/desc_task_textView"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/priority_spinner" />


    <Button
        android:id="@+id/dialog_update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_update_task"
        android:layout_alignParentRight="true"
        android:background="#dde5ad"
        android:layout_below="@id/priority_spinner"
        />

    <Button
        android:id="@+id/dialog_cancel1_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cancel"
        android:layout_toLeftOf="@id/dialog_update_btn"
        android:background="#dde5ad"
        android:layout_marginRight="3dp"
        android:layout_alignBaseline="@id/dialog_update_btn"
        />

</RelativeLayout>